Update CalculatorUtils.java